cambios en navbar y se agrego footer

--- a/LeagueOfLegenedsNievas/Aplicaciones/templates/paginas/home.html
+++ b/LeagueOfLegenedsNievas/Aplicaciones/templates/paginas/home.html
@@ -4,7 +4,7 @@
 
 {% block contenido %}
     <div class="container">
-        <div class="col-12">
+        <div class="col-12" style="margin-top:5em;">
             <br>
             <img src="https://static.wikia.nocookie.net/lolesports_gamepedia_en/images/2/26/Mid-Season_Invitational_2022.png/revision/latest?cb=20220330002015" width="100%" alt="logo_invitacional-2022">
         </div>
