--- a/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
+++ b/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
     </head>
     <body>
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
           <div class="container-fluid">
             <div class="nav navbar-nav">
               <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fvignette.wikia.nocookie.net%2Fleagueoflegends%2Fimages%2F5%2F53%2FRiot_Games_logo_icon.png%2Frevision%2Flatest%3Fcb%3D20190417213704&f=1&nofb=1" width="7%" alt="logo">
@@ -1005,5 +1005,23 @@
                 ]
               }
             </script>
+            <!-- Remove the container if you want to extend the Footer to full width. -->
+      <div class="container-12">
+        <footer class="bg-dark text-center text-white">
+          <div class="container p-4 pb-0">
+            <section class="mb-2">
+              <a class="btn btn-floating" href="https://www.linkedin.com/in/paulo-facundo-gaston-nievas/" role="button">
+                <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fsav-elec.fr%2Fwp-content%2Fuploads%2F2017%2F02%2FIcone_Linkedin.png&f=1&nofb=1" width="10%"></img>
+              </a>
+              <a class="btn btn-floating" href="github.com/F4cku23/" role="button">
+                <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ficones.pro%2Fwp-content%2Fuploads%2F2021%2F06%2Ficone-github-grise-300x300.png&f=1&nofb=1" width="10%"></img>
+              </a>
+            </section>
+          </div>
+          <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2022 Copyright: Paulo Nievas</a>
+          </div>
+        </footer>
+      </div>
     </body>
 </html>
