--- a/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
+++ b/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
     </head>
-    <body>
+    <body style="padding-top: 5em;">
         <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
           <div class="container-fluid">
             <div class="nav navbar-nav">
@@ -38,7 +38,6 @@
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
         <script>
             const listado={
                 "campeones": [
@@ -1005,23 +1004,7 @@
                 ]
               }
             </script>
-            <!-- Remove the container if you want to extend the Footer to full width. -->
-      <div class="container-12">
-        <footer class="bg-dark text-center text-white">
-          <div class="container p-4 pb-0">
-            <section class="mb-2">
-              <a class="btn btn-floating" href="https://www.linkedin.com/in/paulo-facundo-gaston-nievas/" role="button">
-                <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fsav-elec.fr%2Fwp-content%2Fuploads%2F2017%2F02%2FIcone_Linkedin.png&f=1&nofb=1" width="10%"></img>
-              </a>
-              <a class="btn btn-floating" href="github.com/F4cku23/" role="button">
-                <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ficones.pro%2Fwp-content%2Fuploads%2F2021%2F06%2Ficone-github-grise-300x300.png&f=1&nofb=1" width="10%"></img>
-              </a>
-            </section>
-          </div>
-          <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2022 Copyright: Paulo Nievas</a>
-          </div>
-        </footer>
-      </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+
     </body>
 </html>
