--- a/LeagueOfLegenedsNievas/Aplicaciones/templates/paginas/home.html
+++ b/LeagueOfLegenedsNievas/Aplicaciones/templates/paginas/home.html
@@ -3,8 +3,8 @@
 {% block titulo %} Home {% endblock %}
 
 {% block contenido %}
-    <div class="container">
-        <div class="col-12" style="margin-top:5em;">
+    <div class="container-fluid">
+        <div class="col-12">
             <br>
             <img src="https://static.wikia.nocookie.net/lolesports_gamepedia_en/images/2/26/Mid-Season_Invitational_2022.png/revision/latest?cb=20220330002015" width="100%" alt="logo_invitacional-2022">
         </div>
@@ -14,6 +14,9 @@
             <a href="https://lolesports.com/en_US/" class="btn btn-outline-secondary" type="button" target="_blank">Ver mas partidas</a>
           </div>
         <br><br>
+        
     </div>
+    
+    
 {% endblock  %}
         
