solucionado el error del search

--- a/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
+++ b/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
@@ -21,8 +21,8 @@
                 <a class="nav-item nav-link" href="https://lolesports.com/schedule?leagues=lla" target="_blank">Partidas</a>
             </div>
             <form class="d-flex" role="search" action="{% url 'search' %}" methos="GET">
-              <input class="form-control me-2" type="search" placeholder="Buscar" id="nombre">
-              <button class="btn btn-outline-secondary" type="submit" name="buscar">Search</button>
+              <input class="form-control me-2" type="search" placeholder="Buscar" id="equipo" name="equipo">
+              <button class="btn btn-outline-secondary" type="submit">Search</button>
             </form>
           </div>
         </nav>
