modificaciones en pagina "partidas", boton login

--- a/LeagueOfLegenedsNievas/Aplicaciones/templates/paginas/home.html
+++ b/LeagueOfLegenedsNievas/Aplicaciones/templates/paginas/home.html
@@ -11,7 +11,7 @@
         <br><br>
         
         <div class="d-grid gap-2">
-            <a href="https://lolesports.com/en_US/" class="btn btn-outline-secondary" type="button" target="_blank">Ver mas partidas</a>
+            <a href="https://lolesports.com/schedule?leagues=" class="btn btn-outline-secondary" type="button" target="_blank">Ver mas partidas</a>
           </div>
         <br><br>
         
