--- a/LeagueOfLegenedsNievas/Aplicaciones/static/style.css
+++ b/LeagueOfLegenedsNievas/Aplicaciones/static/style.css
@@ -2,6 +2,6 @@ body{
     background-color: #0A1428;
 }
 
-nav{
-    background-color: #091428;
+.modal-backdrop{
+    position: unset !important;
 }
