--- a/LeagueOfLegenedsNievas/Aplicaciones/templates/paginas/home.html
+++ b/LeagueOfLegenedsNievas/Aplicaciones/templates/paginas/home.html
@@ -6,7 +6,7 @@
     <div class="container-fluid">
         <div class="col-12">
             <br>
-            <img src="./static/img/back_home.png" width="100%" alt="logo_invitacional-2022">
+            <img src="./static/img/back_home_1.png" width="100%" alt="logo_invitacional-2022">
         </div>
         <br><br>
         
