--- a/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
+++ b/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
@@ -95,7 +95,7 @@
           </div>
         </nav>
 
-        <div class="container">
+        <div class="container fondo">
             <div class="row">
                 <div class="col-12">
                     {% block contenido %}
@@ -109,5 +109,19 @@
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 
+        <script src="https://kit.fontawesome.com/6d5b662496.js" crossorigin="anonymous"></script>
+      
+      <footer>
+        <div class="about_us">
+          <div class="box">
+            <a class="nav-item nav-link" href=" {% url 'about' %} ">Sobre nosotros</a>
+          </div>
+          <div class="box">
+            <small>Copyright%copy; 2022 <br>
+              <b>Paulo Facundo Nievas, Ángeles Figueroa Rodríguez</b> <br>
+              - Todos los derechos reservados.</small>
+          </div>
+        </div>
+      </footer>
     </body>
 </html>
