--- a/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
+++ b/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
@@ -103,8 +103,7 @@
       <footer>
         <div class="about_us">
           <div class="box">
-            {% comment %} <a class="nav-item nav-link" href=" {% url 'about' %} ">Sobre nosotros</a> 
-            {% endcomment %}
+            {% comment %} <a class="nav-item nav-link" href=" {% url 'about' %} ">Sobre nosotros</a>             {% endcomment %}
           </div>
           <div class="box">
             <small>Copyright%copy; 2022 <br>
