--- a/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
+++ b/LeagueOfLegenedsNievas/Aplicaciones/templates/base.html
@@ -100,17 +100,15 @@
 
         <script src="https://kit.fontawesome.com/6d5b662496.js" crossorigin="anonymous"></script>
       
-      <footer>
-        <div class="about_us">
-          <div class="box">
-            {% comment %} <a class="nav-item nav-link" href=" {% url 'about' %} ">Sobre nosotros</a>   {% endcomment %}
+        <footer>
+          <div class="about_us">
+            <div class="box">
+              <a class="nav-item nav-link" href=" {% url 'about' %} ">Sobre nosotros</a>
+            </div>
+            <div class="box">
+              <small>© Copyright 2022 - <b>Paulo Nievas, Ángeles Figueroa Rodríguez</b></small>
+            </div>
           </div>
-          <div class="box">
-            <small>Copyright%copy; 2022 <br>
-              <b>Paulo Facundo Nievas, Ángeles Figueroa Rodríguez</b> <br>
-              - Todos los derechos reservados.</small>
-          </div>
-        </div>
-      </footer>
+        </footer>
     </body>
 </html>
