--- a/LeagueOfLegenedsNievas/Aplicaciones/static/style.css
+++ b/LeagueOfLegenedsNievas/Aplicaciones/static/style.css
@@ -29,13 +29,13 @@ body{
     font-family: 'Times New Roman', Times, serif;
     font-size: 40px;
     text-align: center;
-    text-shadow: 1 px 1 px 1 px rgba(0, 0, 0, 0.342);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.342);
     position: sticky;
 }
 
 .texto{
     color:aliceblue;
-    font-size: 30px;
+    font-size: 1em;
     text-align: justify;
     padding-right: 1em !important;
 }
